Actually lets make it bottom-top

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ParsingExercise C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(ParsingExercise src/main.c src/RecursiveDescent.h src/Token.h src/RecursiveDescent.c src/Token.c src/stack.c src/stack.h src/JsonParser.h src/JsonParser.c)
+add_executable(ParsingExercise src/main.c src/RecursiveDescent.h src/Token.h src/RecursiveDescent.c src/Token.c src/stack.c src/stack.h src/SimpleJsonParser.h src/SimpleJsonParser.c)
